--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,10 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7'
+#    ## Just manually copy Python 3.7.9 to ...\_work\_tool\Python\3.7.9\x64. Registry gets messed up otherwise.
+#    - name: Set up Python
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: '3.7'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
