--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,9 +1,20 @@
 name: Test
-on: [workflow_dispatch]
+on: workflow_dispatch
 jobs:
   test:
     runs-on: windows
     steps:
       - uses: actions/checkout@v2
-      - name: Test
-        run: py -m venv .venv
+      - name: Install build tools
+        run: |
+          py -m venv .venv
+          .venv\Scripts\Activate.ps1
+          pip install -U pip
+          pip install -U setuptools wheel twine
+      - name: Build and publish to PyPi
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
