--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -5,12 +5,10 @@ jobs:
     runs-on: windows
     steps:
       - uses: actions/checkout@v2
-      - name: Install build tools
+      - name: Update build tools
         run: |
-          py -m venv .venv
-          .venv\Scripts\Activate.ps1
-          pip install -U pip
-          pip install -U setuptools wheel twine
+          py -m pip install -U pip
+          py -m pip install -U setuptools wheel twine
       - name: Build and publish to PyPi
         env:
           TWINE_USERNAME: __token__
