--- a/.github/workflows/changerelease.yml
+++ b/.github/workflows/changerelease.yml
@@ -10,7 +10,7 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-    - uses: dropseed/changerelease
+    - uses: dropseed/changerelease@v1.3.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tag_prefix: ""
