--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,13 @@
-# This workflows will upload a Python Package using Twine when a release is created
+# This workflow will upload a Python Package using Twine when the changerelease workflow is requested
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Python Package
+name: publish
 
 on:
   workflow_dispatch:
-  release:
-    types: [created]
+  workflow_run:
+    workflows: ["changerelease"]
+    types: [requested]
 
 jobs:
   deploy:
