--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
   test:
     runs-on: Windows
     steps:
+      - uses: actions/checkout@v2
       - name: test
         run: |
           Get-Location
