--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Python
         run: |
+          Get-Location
           ..\.venv\Scripts\Activate.ps1
           pip install --force-reinstall -r ..\requirements.txt
       - name: Build docs
