--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,6 +2,11 @@ name: docs
 
 on:
   workflow_dispatch:
+  push:
+    branches: main
+    paths: 
+      - "docs-src/**"
+      - "src/**"
 
 jobs:
   test:
