--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,8 @@ name: docs
 on:
   workflow_dispatch:
   push:
-    branches: main
-    paths: 
+    branches: [main]
+    paths:
       - "docs-src/**"
       - "src/**"
 
